--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,9 @@
   padding: 0;
   list-style: none;
 }
+img {
+  max-width: 100%;
+}
 .App {
   min-height: 100vh;
   text-align: center;
@@ -20,6 +23,8 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  width: 90%;
+  margin: 0 auto;
 }
 .nav-desktop {
   display: none;
@@ -60,4 +65,147 @@
 .div-mobile-menu-inner ul li a {
   color: #fff;
   text-decoration: none;
+}
+
+/* Home */
+.home-div {
+  text-align: left;
+}
+.home-bg {
+  background-image: url("public/hero-image.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 50vh;
+  width: 100%;
+}
+.desktop-text {
+  display: none;
+}
+.mobile-text {
+  width: 90%;
+  margin: 0 auto;
+}
+.mobile-text h1 {
+  letter-spacing: 1px;
+  padding: .5em 0;
+  text-align: center;
+  text-transform: uppercase;
+}
+.mobile-text p {
+  color: #8d8787;
+  line-height: 1.6rem;
+  padding-bottom: 1em;
+}
+
+.mobile-text button {
+  background-color: rgb(216, 15, 15);
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-family: "Poppins", sans-serif;
+  padding: 1em 1.5em;
+  text-transform: uppercase;
+}
+
+.lower-text {
+  margin-top: 3em;
+}
+.lower-text h2 {
+  letter-spacing: 1px;
+  text-align: center;
+  padding: .5em 0;
+}
+.lower-text p {
+  color: #8d8787;
+  line-height: 1.6rem;
+  margin: 0 auto;
+  padding-bottom: 1em;
+  width: 90%;
+}
+
+/* Products */
+.div-product {
+  text-align: center;
+  padding-top: 3em;
+}
+.div-product h2 {
+  padding-bottom: 1em;
+}
+.map-div {
+  width: 80%;
+  margin: 0 auto;
+  padding-bottom: 1em;
+}
+.map-div img {
+  border-radius: 5px;
+  height: 450px;
+  width: 100%;
+}
+.map-div div {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Single Product */
+.single-div {
+  margin: 0 auto;
+  padding: 2em 0;
+  width: 90%;
+}
+.single-div h2 {
+  padding-bottom: .5em;
+}
+.single-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+/* Contact */
+.contact-div {
+  margin: 0 auto;
+  width: 90%;
+}
+.contact-row {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.contact-row > div {
+  background-color: rgb(67, 98, 138);
+  color: #fff;
+  margin: 1em 0;
+  padding: 1.5em;
+  width: 35%;
+}
+.contact-form {
+  text-align: center;
+}
+.contact-form input {
+  border: none;
+  border-bottom: 1px solid #f1f1f1;
+  margin: .5em 0em;
+  padding: 1em;
+  width: 90%;
+}
+.contact-form input::placeholder {
+  color: #8d8787;
+}
+.contact-form textarea {
+  border: 1px solid #f1f1f1;
+  height: 180px;
+  margin-top: 1em;
+  resize: none;
+  width: 97%;
+}
+.contact-form button {
+  background: rgb(0, 4, 255);
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  text-transform: uppercase;
+  padding: 1em;
 }
