--- a/src/App.css
+++ b/src/App.css
@@ -72,7 +72,7 @@ img {
   text-align: left;
 }
 .home-bg {
-  background-image: url("hero-image.jpg");
+  background-image: url("/hero-image.jpg");
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
